[package]

name = "luthor"
version = "0.1.7"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "A collection of lexers for various languages/formats, and the tools required to build them."
keywords = ["lex", "token", "syntax"]
homepage = "https://github.com/jmacdonald/luthor"
documentation = "http://jordanmacdonald.ca/rust/luthor"
license = "MIT"
